# verifiers

environments/tau2_bench/: pyproject.toml
environments/tau2_bench/tau2_bench/: __init__.py  tau2_bench.py  tau2_data.py  tau2_platform_env.py  tau2_rewards.py  tau2_tools.py  tau2_user_env.py
verifiers/clients/: openai_chat_completions_client.py  openai_chat_completions_token_client.py
