[project]
name = "tau2-bench-env"
version = "0.1.0"
description = "tau2-bench agentic airline booking environment for verifiers"
tags = ["tau2", "multi-turn", "agentic", "airline", "train", "eval"]
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tau2_bench"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 2
